--- a/Ovning16/Components/Widgets/StatusSummary.razor
+++ b/Ovning16/Components/Widgets/StatusSummary.razor
@@ -1,11 +1,11 @@
 ﻿
 
-<div class="container-fluid border-2 border-info bg-light-subtle text-center align-middle vstack" style="border-radius:10px;">
-    <h4 class="text-light-emphasis mt-2 mb-2">Status summary</h4>
-    <span class="text-success">
+<div class="border border-2 border-info rounded bg-light-subtle text-center align-middle vstack mt-2 me-1 pt-0 pb-1">
+    <span class="fw-bold text-light-emphasis mt-1 mb-1">Status</span>
+    <span class="text-success ms-1 me-1">
         &#x2022; @NumberOnline online
     </span>
-    <span class="text-danger">
+    <span class="text-danger ms-1 me-1">
         &#x2022; @NumberOffline offline
     </span>
 </div>
