--- a/Ovning16/Components/Pages/AddDevice.razor
+++ b/Ovning16/Components/Pages/AddDevice.razor
@@ -12,6 +12,13 @@
         </div>
 
         <div class="row mb-3 align-items-center">
+            <label for="nickname" class="col-sm-2 col-form-label">Nickname (optional): </label>
+            <div class="col-sm-10">
+                <InputText id="nickname" class="form-control" @bind-Value="@DeviceAddDTO.NickName" placeholder="Nickname of the device"></InputText>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-center">
             <label for="description" class="col-sm-2 col-form-label">Description: </label>
             <div class="col-sm-10">
                 <InputTextArea rows="3" id="description" class="form-control" @bind-Value="@DeviceAddDTO.Description" placeholder="Description of the device"></InputTextArea>
