feat: Add StatusBadge component

--- a/Ovning16/Components/Layout/NavMenu.razor
+++ b/Ovning16/Components/Layout/NavMenu.razor
@@ -23,8 +23,8 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="navbar-nav">
-                        <NavLink class="nav-link active" href="/">Overview</NavLink>
-                        <NavLink class="nav-link active" href="/adddevice">Add device</NavLink>
+                        <NavLink class="nav-link active fw-bold" href="/">Overview</NavLink>
+                        <NavLink class="nav-link active fw-bold" href="/adddevice">Add device</NavLink>
                     </div>
                 </div>
             </div>
