--- a/Ovning16/Components/Pages/DeleteDevice.razor
+++ b/Ovning16/Components/Pages/DeleteDevice.razor
@@ -34,7 +34,7 @@ else if (!Saved)
             </tr>
             <tr>
                 <td>Status</td>
-                <td>@Device.IsOnline</td>
+                <td><StatusBadge Status="@Device.IsOnline" /></td>
             </tr>
             <tr>
                 <td>Last connected</td>
