--- a/Ovning16/Components/_Imports.razor
+++ b/Ovning16/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Ovning16
 @using Ovning16.Components
+@using Ovning16.Components.Widgets
+@using Ovning16.Components.Helpers
