--- a/Ovning16/Components/Pages/DeviceDetails.razor
+++ b/Ovning16/Components/Pages/DeviceDetails.razor
@@ -34,7 +34,7 @@ else
                 </tr>
                 <tr>
                     <td>Status</td>
-                    <td>@Device.IsOnline</td>
+                    <td><StatusBadge Status="@Device.IsOnline" /></td>
                 </tr>
                 <tr>
                     <td>Last connection</td>
