refactor: Add LinkButton and ActionButton helpers

--- a/Ovning16/Components/Pages/AddDevice.razor
+++ b/Ovning16/Components/Pages/AddDevice.razor
@@ -39,6 +39,6 @@ else
 {
     <div class="alert alert-success">Device successfully created</div>
 
-    <a class="btn btn-outline btn-primary" href="@($"devicedetails/{Device.DeviceGuid}")">Device details</a>
-    <a class="btn btn-outline btn-primary" href="/">Back to overview</a>
+    <LinkButton Href="@($"devicedetails/{Device.DeviceGuid}")">Device details</LinkButton>
+    <LinkButton Href="/">Back to overview</LinkButton>
 }
