--- a/Ovning16/Components/Pages/EditDevice.razor
+++ b/Ovning16/Components/Pages/EditDevice.razor
@@ -8,7 +8,7 @@
 else if (!FoundDevice)
 {
     <div class="alert alert-danger text-center mt-5 mb-5">This device could not be found.</div>
-    <a class="btn btn-outline btn-primary" href="/">Back to overview</a>
+    <LinkButton Href="/">Back to overview</LinkButton>
 }
 else if (!Saved)
 {
@@ -53,9 +53,9 @@ else if (!Saved)
 
         <div class="container-fluid mt-2">
             <button type="submit" form="EditDeviceForm" class="btn btn-primary">Save details</button>
-            <a class="btn btn-outline-primary" href="@($"editdevice/{Device.DeviceGuid}")">Edit device</a>
-            <a class="btn btn-outline-primary" href="@($"deletedevice/{Device.DeviceGuid}")">Delete device</a>
-            <a class="btn btn-outline-primary" href="/">Back to overview</a>
+            <LinkButton Href="@($"editdevice/{Device.DeviceGuid}")">Edit device</LinkButton>
+            <LinkButton Href="@($"deletedevice/{Device.DeviceGuid}")">Delete device</LinkButton>
+            <LinkButton Href="/">Back to overview</LinkButton>
         </div>
     </div>
 }
@@ -63,6 +63,6 @@ else
 {
     <div class="alert alert-success mt-3 mb-3">Device successfully updated</div>
 
-    <a class="btn btn-outline btn-primary" href="@($"devicedetails/{Device.DeviceGuid}")">Device details</a>
-    <a class="btn btn-outline btn-primary" href="/">Back to overview</a>
+    <LinkButton Href="@($"devicedetails/{Device.DeviceGuid}")">Device details</LinkButton>
+    <LinkButton Href="/">Back to overview</LinkButton>
 }
