--- a/Ovning16/Components/Pages/DeleteDevice.razor
+++ b/Ovning16/Components/Pages/DeleteDevice.razor
@@ -12,7 +12,7 @@ else if (!FoundDevice)
 }
 else if (!Saved)
 {
-    <h4 class="text-start text-light-emphasis ms-4 mt-2 mb-2">Delete this device?</h4>
+    <MainHeader>Delete this device?</MainHeader>
 
     <table class="table table-sm align-middle mb-3">
         <tbody>
