--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @rendermode InteractiveServer
 
-<h3 class="text-center text-light-emphasis mt-2 mb-2">Overview of Devices</h3>
+<MainHeader>Overview of Devices</MainHeader>
 
 @if (Devices is null)
 {
