--- a/Ovning16/Components/Pages/EditDevice.razor
+++ b/Ovning16/Components/Pages/EditDevice.razor
@@ -13,7 +13,7 @@ else if (!FoundDevice)
 else if (!Saved)
 {
     <div class="container-fluid">
-        <h4 class="text-start text-light-emphasis ms-4 mt-2 mb-2">Edit instrument details</h4>
+        <MainHeader>Edit instrument details</MainHeader>
         <EditForm Enhance id="EditDeviceForm" Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
             <div class="row mb-3 align-items-center">
                 <label for="guid" class="col-form-label col-sm-2">Device ID: </label>
