--- a/Ovning16/Components/Pages/EditDevice.razor
+++ b/Ovning16/Components/Pages/EditDevice.razor
@@ -1,68 +1,53 @@
 ﻿@page "/editdevice/{DeviceGuid:guid}"
 @rendermode InteractiveServer
 
-@if (!FinishedSearch)
-{
-    <p><em>Loading...</em></p>
-}
-else if (!FoundDevice)
-{
-    <div class="alert alert-danger text-center mt-5 mb-5">This device could not be found.</div>
-    <LinkButton Href="/">Back to overview</LinkButton>
-}
-else if (!Saved)
-{
-    <div class="container-fluid">
-        <MainHeader>Edit instrument details</MainHeader>
-        <EditForm Enhance id="EditDeviceForm" Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
-            <div class="row mb-3 align-items-center">
-                <label for="guid" class="col-form-label col-sm-2">Device ID: </label>
-                <div class="col-sm-10">
-                    <input type="text" disabled id="guid" class="form-control" value="@Device.DeviceGuid" />
-                </div>
-            </div>
+<div class="container-fluid">
+<MainHeader>Edit instrument details</MainHeader>
+<LookForDevice DeviceDataService="@DeviceDataService" DeviceGuid="@DeviceGuid" SetDevice="@SetDevice">
 
-            <div class="row mb-3 align-items-center">
-                <label for="name" class="col-form-label col-sm-2">Name: </label>
-                <div class="col-sm-10">
-                    <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.Name" placeholder="@Device.Name"></InputText>
-                </div>
+    <EditForm Enhance id="EditDeviceForm" Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
+        <div class="row mb-3 align-items-center">
+            <label for="guid" class="col-form-label col-sm-2">Device ID: </label>
+            <div class="col-sm-10">
+                <input type="text" disabled id="guid" class="form-control" value="@Device.DeviceGuid" />
             </div>
-
-            <div class="row mb-3 align-items-center">
-                <label for="name" class="col-form-label col-sm-2">Nickname (optional): </label>
-                <div class="col-sm-10">
-                    <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.NickName" placeholder="@(Device.NickName is null ? string.Empty : Device.NickName)"></InputText>
-                </div>
-            </div>
-
-            <div class="row mb-3 align-items-center">
-                <label for="description" class="col-form-label col-sm-2">Description: </label>
-                <div class="col-sm-10">
-                    <InputText id="description" class="form-control" @bind-Value="@DeviceUpdateDTO.Description" placeholder="@Device.Description"></InputText>
-                </div>
-            </div>
-
-            <div class="row mb-3 align-items-center">
-                <label for="isOnline" class="col-form-label col-sm-2">Status: </label>
-                <div class="col-sm-10">
-                    <input type="checkbox" disabled id="isOnline" class="form-check-input" checked="@Device.IsOnline" />
-                </div>
-            </div>
-        </EditForm>
-
-        <div class="container-fluid mt-2">
-            <button type="submit" form="EditDeviceForm" class="btn btn-primary">Save details</button>
-            <LinkButton Href="@($"editdevice/{Device.DeviceGuid}")">Edit device</LinkButton>
-            <LinkButton Href="@($"deletedevice/{Device.DeviceGuid}")">Delete device</LinkButton>
-            <LinkButton Href="/">Back to overview</LinkButton>
         </div>
-    </div>
-}
-else
-{
-    <div class="alert alert-success mt-3 mb-3">Device successfully updated</div>
 
-    <LinkButton Href="@($"devicedetails/{Device.DeviceGuid}")">Device details</LinkButton>
-    <LinkButton Href="/">Back to overview</LinkButton>
-}
+        <div class="row mb-3 align-items-center">
+            <label for="name" class="col-form-label col-sm-2">Name: </label>
+            <div class="col-sm-10">
+                <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.Name" placeholder="@Device.Name"></InputText>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-center">
+            <label for="name" class="col-form-label col-sm-2">Nickname (optional): </label>
+            <div class="col-sm-10">
+                <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.NickName" placeholder="@(Device.NickName is null ? string.Empty : Device.NickName)"></InputText>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-center">
+            <label for="description" class="col-form-label col-sm-2">Description: </label>
+            <div class="col-sm-10">
+                <InputText id="description" class="form-control" @bind-Value="@DeviceUpdateDTO.Description" placeholder="@Device.Description"></InputText>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-center">
+            <label for="isOnline" class="col-form-label col-sm-2">Status: </label>
+            <div class="col-sm-10">
+                <input type="checkbox" disabled id="isOnline" class="form-check-input" checked="@Device.IsOnline" />
+            </div>
+        </div>
+    </EditForm>
+
+    <div class="container-fluid mt-2">
+        <button type="submit" form="EditDeviceForm" class="btn btn-primary">Save details</button>
+        <LinkButton Href="@($"editdevice/{Device.DeviceGuid}")">Edit device</LinkButton>
+        <LinkButton Href="@($"deletedevice/{Device.DeviceGuid}")">Delete device</LinkButton>
+        <LinkButton Href="/">Back to overview</LinkButton>
+    </div>
+
+</LookForDevice>
+</div>
